fixes: viewblock tx api, 0x in qr code, up down arrow overlap

--- a/app/assets/style/base.scss
+++ b/app/assets/style/base.scss
@@ -21,7 +21,13 @@ code {
     margin: 0;
     padding: .2em .4em;
 }
-
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
 a {
     &.link {
         transition: color .3s, opacity .3s, background .3s, text-decoration .5s;
